# FileWatcher

./: .gitignore  README.md  config.asdf  config.ini  filewatcher.py  initialize.py  main.py  movies.py  music.py  pyproject.toml  requirements.txt
filewatcher/: main.py
filewatcher/audio/: music.py
filewatcher/core/: __init__.py  filewatcher.py  initialize.py
filewatcher/movies/: __init__.py  movies.py
