[tool.poetry]
name = "filewatcher"
version = "3.0.0"
description = ""
authors = ["Joe Kaufeld <joe.kaufeld@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.4.0"
pytest = "^6.2.0"
configobj = "^5.0.6"
requests = "^2.25.0"
addict = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
