[tool.poetry]
name = "filewatcher"
version = "3.1.0"
description = ""
authors = ["Joe Kaufeld <opensource@joekaufeld.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^9.4.0"
pytest = "^6.2.0"
configobj = "^5.0.6"
requests = "^2.31.0"
addict = "^2.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
